--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
 
 }
 .container {
-    width: 80vw;
+    width: 80%;
     height: 100vh;
     display: flex;
     margin:  0 auto;
     background-color: #fff;
 }
 .left-section {
-    width: 70vh;
+    width: 80%;
     position: relative;
     background-image: url('images.webp');
     background-repeat: no-repeat;
@@ -37,18 +37,7 @@ body {
     font-size: 5rem;
     font-family: 'NorseFont', sans-serif;
 }
-.odin-logo {
-    margin-top: 150px;
-    padding: 10px 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.512);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
 
-
-}
 .left-section .odin-logo {
     margin-top: 150px;
     padding: 10px 0;
@@ -69,7 +58,7 @@ body {
 
 }
 
-.left-section .photo {
+.left-section .credits-for-photo {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.7rem;
     position: absolute;
@@ -78,6 +67,177 @@ body {
 
 }
 .left-section .credits-for-photo a ,.left-section .credits-for-photo{
+
+    color: #fff;
+}
+
+.right-section {
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: flex-start;
+    background-color: #fff;
+    padding: 0;
+}
+.header {
+        width: 100%;
+        background-color: #eeeff0;
+         padding: 80px ;
+        line-clamp: 113%;
+}
+.header .header-description{
+    width: 80%;
+}
+form header .get-started {
+    margin-bottom: 12px;
+
+}
+form{
+    width: 100%;
+}
+form div {
+    width: 60%;
+    display: flex;
+    padding: 15px;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 50px;
+    flex-wrap: wrap;
+    flex: 1 1 auto;
+    gap: 2px;
+    background-color: #FFF;
+}
+
+
+
+form .form-input {
+    display: flex;
+    flex-direction: column;
+
+    width: 235px;
+    height: 50px;
+    margin-right: 50px;
+    margin-bottom: 15px;
+
+}
+
+form label {
+    display: block;
+    color: #3c3c3c;
+    font-size: 0.8rem;
+
+}
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"],
+form input[type="password"] {
+    font-size: 1.2rem;
+    width: 100%;
+    padding: 5px 5px;
+    border-radius: 4px;
+    height: 1.8rem;
+
+    border: solid 2px #E5E7EB;
+}
+
+.form-input input[type="text"]:focus,
+.form-input input[type="email"]:focus,
+.form-input input[type="tel"]:focus {
+    outline: solid 2px rgb(0, 0, 255);
+    box-shadow: 1px 1px 2px 0.6px #333;
+    border: none;
+}
+
+.form-input input[type="password"]:invalid {
+    border: solid red 2px;
+    /* : none; */
+
+}
+
+form input[type="password"]:valid:focus {
+    border: solid #E5E7EB 1px;
+
+}
+
+.form-input span {
+    font-size: 0.5rem;
+    color: red;
+}
+
+form input:valid+span {
+    color: black;
+}
+div.form-inputs{
+    width: 100%;
+    box-shadow: 0 2px 2px 1px #a7a7a7;
+    margin-top: 0;
+
+}
+.inputs-title{
+   width: 100%;
+   padding: 0;
+   margin-bottom: 12px;
+}
+
+button.submit-button {
+    display: block;
+    padding: 8px 20px;
+    margin-top: 20px;
+    margin-left: 60px;
+    background: transparent;
+    background-color: #596D48;
+    border-radius: 8px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 2px 2px 2px #fff;
+    width: 200px;
+}
+
+.sign-in {
+    padding-left: 50px;
+    margin-top: 12px;
+}
+
+.sign-in a {
+    color: #596D48;
+}
+
+
+
+
+.odin-logo {
+    margin-top: 150px;
+    padding: 10px 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.512);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+
+}
+
+.odin-logo img {
+
+    width: 70px;
+    max-height: 120px;
+
+
+}
+
+.left-section .photo {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.7rem;
+    position: absolute;
+    bottom: 10px;
+    left: 125px;
+
+}
+
+.left-section .photo a {
 
     color: #fff;
 }
